--- a/static/ui.css
+++ b/static/ui.css
@@ -1153,7 +1153,7 @@ body.menu .mobile-menu div:nth-child(3) {
     left: 0;
     right: 0;
     width: 100%;
-    max-width: calc(var(--max-width) + 20px);
+    max-width: calc(var(--max-width));
     margin: 0 auto;
 }
 
@@ -1182,7 +1182,7 @@ header {
 
 header>.container {
     position: relative;
-    width: calc(100% - 20px);
+    width: calc(100%);
     height: 100%;
     padding: 0 10px 0 10px;
 }
@@ -1190,7 +1190,7 @@ header>.container {
 @media only screen and (max-width: 300px) {
     /* smaller borders on smaller screens */
     header>.container {
-        width: calc(100% - 10px);
+        width: calc(100%);
         padding: 0 5px 0 5px;
     }
 }
@@ -1296,8 +1296,9 @@ main {
 }
 
 main>.container {
-    position: static;
-    width: calc(100% - 20px);
+    position: relative;
+    min-height: 100%;
+    width: 100%;
     padding: 10px 10px calc(var(--footer-height) + 10px) 10px;
 }
 
